add Creating Chatroom

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,9 @@
         <FrameLayout
             android:id="@+id/talkViewFrame"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@+id/contentViewFrame"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/contentViewFrame" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
