--- a/app/src/main/res/layout/fragment_youtube_player.xml
+++ b/app/src/main/res/layout/fragment_youtube_player.xml
@@ -11,7 +11,7 @@
         android:id="@+id/youtubePlayerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:autoPlay="true"
+        app:autoPlay="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:showFullScreenButton="true"
