--- a/app/src/main/res/layout/fragment_real_time_chat.xml
+++ b/app/src/main/res/layout/fragment_real_time_chat.xml
@@ -5,7 +5,7 @@
     android:id="@+id/ChatRoomView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".main.RealTimeChatFragment">
+    tools:context=".main.chat.RealTimeChatFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/messageRecyclerView"
