--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -26,7 +26,7 @@
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/contentViewFrame" />
+            app:layout_constraintTop_toBottomOf="@+id/chatroom_contentViewFrame" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
