fix message keyboard type

--- a/app/src/main/res/layout/fragment_real_time_chat.xml
+++ b/app/src/main/res/layout/fragment_real_time_chat.xml
@@ -46,6 +46,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:hint="@string/send_message"
+            android:imeOptions="actionSend"
             android:inputType="textPersonName"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btnSendMessage"
