--- a/app/src/main/res/layout/fragment_youtube_player.xml
+++ b/app/src/main/res/layout/fragment_youtube_player.xml
@@ -30,4 +30,15 @@
         app:fontSize="12sp"
         app:layout_constraintTop_toBottomOf="@+id/youtubePlayerView" />
 
+    <Button
+        android:id="@+id/btnCoverScreen"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/fui_transparent"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
