add youtube content edit fragment implement video selection in YoutubeVideoSelectionActivity
use ActivityResultContract instead of onActivityResult
because onActivityResult is deprecated

--- a/app/src/main/res/layout/activity_youtube_video_selection.xml
+++ b/app/src/main/res/layout/activity_youtube_video_selection.xml
@@ -7,13 +7,21 @@
     tools:context=".YoutubeVideoSelectionActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/videoSelectRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/videoRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/videoSelectRecyclerView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
