--- a/app/src/main/res/layout/item_video_searched.xml
+++ b/app/src/main/res/layout/item_video_searched.xml
@@ -42,7 +42,7 @@
         app:layout_constraintTop_toBottomOf="@id/textTitle" />
 
     <TextView
-        android:id="@+id/textChannelTitle"
+        android:id="@+id/textChannelTitle_playlist"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
