--- a/app/src/main/res/layout/item_video_playlist.xml
+++ b/app/src/main/res/layout/item_video_playlist.xml
@@ -22,11 +22,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:lines="1"
-        android:textSize="18sp"
         android:text="TextView"
+        android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnRemoveVideo"
         app:layout_constraintStart_toEndOf="@+id/imageThumbnail_playlist"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,10 +37,21 @@
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btnRemoveVideo"
         app:layout_constraintStart_toEndOf="@+id/imageThumbnail_playlist"
         app:layout_constraintTop_toBottomOf="@+id/textTitle_playlist" />
+
+    <ImageButton
+        android:id="@+id/btnRemoveVideo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/fui_transparent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_cancel_40" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
