--- a/app/src/main/res/layout/fragment_youtube_player.xml
+++ b/app/src/main/res/layout/fragment_youtube_player.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+h<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -18,8 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:showFullScreenButton="true"
-        app:showYouTubeButton="true"
-        app:videoId="ydqla2glb44" />
+        app:showYouTubeButton="true" />
 
     <com.pierfrancescosoffritti.androidyoutubeplayer.core.ui.views.YouTubePlayerSeekBar
         android:id="@+id/youtube_player_seekbar"
@@ -40,5 +39,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.radiobutton.MaterialRadioButton
+        android:id="@+id/rbtnRealtime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/realtime"
+        android:checked="true"
+        android:textColor="@android:color/white"
+        android:textSize="12sp"
+        app:layout_constraintStart_toStartOf="@+id/youtubePlayerView"
+        app:layout_constraintTop_toTopOf="@+id/youtubePlayerView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
