--- a/app/src/main/res/layout/fragment_youtube_content_edit.xml
+++ b/app/src/main/res/layout/fragment_youtube_content_edit.xml
@@ -43,6 +43,7 @@
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingHorizontal="8dp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
