--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="lightBlack">#1A000000</color>
     <color name="gray">#1A000000</color>
+    <color name="red">#FF0000</color>
+    <color name="halfBlack">#99000000</color>
 </resources>
