add fullscreen chat on/off
fix current played video check
if there is duplicate video, first data found is selected.

--- a/app/src/main/res/layout/custom_player_ui.xml
+++ b/app/src/main/res/layout/custom_player_ui.xml
@@ -52,6 +52,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageButton
+        android:id="@+id/btnChatVisible"
+        android:visibility="gone"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:background="@color/fui_transparent"
+        android:src="@drawable/ic_baseline_arrow_forward_ios_24"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/playLayout"
         android:layout_width="match_parent"
