move chatroom drawer function to chatroom member tab

--- a/app/src/main/res/menu/bottom_nav_menu_chatroom.xml
+++ b/app/src/main/res/menu/bottom_nav_menu_chatroom.xml
@@ -8,6 +8,12 @@
         android:title="@string/content"/>
 
     <item
+        android:id="@+id/action_member"
+        android:enabled="true"
+        android:icon="@drawable/ic_baseline_people_24"
+        android:title="@string/member"/>
+
+    <item
         android:id="@+id/action_chat"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_chat_24"
