make extracting video duration loading view visible
fix removing play-list video

--- a/app/src/main/res/layout/item_video_selected.xml
+++ b/app/src/main/res/layout/item_video_selected.xml
@@ -25,6 +25,7 @@
         app:layout_constraintTop_toBottomOf="@+id/image_thumbnail_video_selected" />
 
     <ImageButton
+        android:contentDescription="@string/imagerror"
         android:id="@+id/button_remove_video_selected"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -32,5 +33,27 @@
         android:src="@drawable/ic_baseline_cancel_40"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/loading_layout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/halfBlack"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:showAnimationBehavior="none" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
