--- a/app/src/main/res/layout/layout_fragment_youtube_content_edit_header.xml
+++ b/app/src/main/res/layout/layout_fragment_youtube_content_edit_header.xml
@@ -55,6 +55,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <ImageButton
+            android:contentDescription="@string/imagerror"
             android:background="@color/fui_transparent"
             android:id="@+id/btnAddVideo"
             android:layout_width="wrap_content"
